fixed image overlapping issue and changed the backend url for edit coomponent

--- a/src/app/blogPost/[id]/page.module.css
+++ b/src/app/blogPost/[id]/page.module.css
@@ -36,7 +36,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 300px;
+  height: auto;
   position: relative;
 }
 
